--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -268,6 +268,28 @@ div {
 }
 div {
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%238C98F2'><polygon points='0,0 100,0 50,50'/></svg>");
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="350" height="200" fill="none" stroke="red"><path d="M50,150 C50,0 200,0 200,75 C200,150 350,150 350,0"/></svg>');
+}
+
+
+/* path move */
+.el-fox {
+    /* define box */
+    width:  3rem;
+    height: 3rem;
+    border-right:  2px solid magenta;
+    background-color:  hsla(204, 44%, 34%, 0.5);
+
+    /* define path */
+    offset-path: path('M0,0 C40,160 60,160 100,0');
+    offset-path: path("M50,150 C50,0 200,0 200,75 C200,150 350,150 350,0");
+    offset-rotate: auto 90deg;
+    offset-anchor: 50% 50%;
+    animation: go 4000ms infinite ease-in-out;
+}
+@keyframes go {
+     50% { offset-distance: 100%; }
+    100% { offset-distance:   0%; }
 }
 
 @supports (-webkit-background-clip: text) {
