--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -98,6 +98,12 @@ div:focus-within .extra-stuff {
 
 /* ======================================================== @MEDIA */
 
+@media screen and (prefers-reduced-motion: reduce) {
+    .pitch-hab * {
+        transition: none !important;
+    }
+}
+
 
 @media screen and (prefers-reduced-motion: reduce) {}        /* do less animations */
 @media screen and (prefers-reduced-motion: no-preference) {} /* do animations */
@@ -267,6 +273,7 @@ div {
     background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30'%3E%3Cg stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg transform='translate%28-128.000000, -59.000000%29' fill='%23F44336'%3E%3Cpolygon points='157.848404 61.9920213 145.980053 73.8603723 157.848404 85.7287234 154.856383 88.7207447 142.988032 76.8523936 131.119681 88.7207447 128.12766 85.7287234 139.996011 73.8603723 128.12766 61.9920213 131.119681 59 142.988032 70.8683511 154.856383 59'%3E%3C/polygon%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
 }
 div {
+    background-image: url('data:image/svg+xml;utf8,');
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%238C98F2'><polygon points='0,0 100,0 50,50'/></svg>");
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="350" height="200" fill="none" stroke="red"><path d="M50,150 C50,0 200,0 200,75 C200,150 350,150 350,0"/></svg>');
 }
@@ -331,6 +338,15 @@ div {
 }
 .myElement:hover {
        animation-play-state: paused;
+}
+
+/* animate when hover */
+
+.el-animation-when-hover { 
+    animation: 2s moveX alternate infinite paused;
+}
+.el-animation-when-hover:hover {
+    animation-play-state: running;
 }
 
 
