--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -41,6 +41,54 @@ section {
   scroll-snap-stop: always;
 }
 
+/* ======================================================== SCROLLBAR */
+
+/* define style 2020 */
+
+/* The emerging W3C standard
+   that is currently Firefox-only */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: blue orange;
+}
+
+/* Works on Chrome/Edge/Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+}
+*::-webkit-scrollbar-track {
+  background: orange;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: blue;
+  border-radius: 20px;
+  border: 3px solid orange;
+}
+
+
+/* hide scrollbar 2019 */
+
+.hidden-scroll {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.hidden-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+/* custom scrollbar */
+
+.aCustomScrollbar::-webkit-scrollbar {
+    width: 4px;
+}
+.aCustomScrollbar::-webkit-scrollbar-track {
+    -webkit-box-shadow: none;
+}
+.aCustomScrollbar::-webkit-scrollbar-thumb {
+  background-color: #ca0713;
+  outline: 1px solid #ca0713;
+}
+
 
 /* ======================================================== LAYOUT */
 
@@ -210,33 +258,6 @@ section.first {
 
 
 
-/* ======================================================== SCROLLBAR */
-
-
-/* hide scrollbar 2019 */
-
-.hidden-scroll {
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-}
-.hidden-scroll::-webkit-scrollbar {
-  display: none;
-}
-
-/* custom scrollbar */
-
-.aCustomScrollbar::-webkit-scrollbar {
-    width: 4px;
-}
-.aCustomScrollbar::-webkit-scrollbar-track {
-    -webkit-box-shadow: none;
-}
-.aCustomScrollbar::-webkit-scrollbar-thumb {
-  background-color: #ca0713;
-  outline: 1px solid #ca0713;
-}
-
-
 
 /* ======================================================== IMAGES */
 
@@ -310,6 +331,10 @@ div {
 }
 
 
+.blur {
+	backdrop-filter: blur(5px);
+}
+
 
 /* ======================================================= ANIMATION */
 
@@ -347,6 +372,29 @@ div {
 }
 .el-animation-when-hover:hover {
     animation-play-state: running;
+}
+
+/* color link on hover */
+https://css-tricks.com/4-ways-to-animate-the-color-of-a-text-link-on-hover/
+
+a {
+  position: relative;
+  display: inline-block;
+  font-size: 2em;
+  font-weight: 800;
+  color: royalblue;
+  overflow: hidden;
+  background: linear-gradient(to right, midnightblue, midnightblue 50%, royalblue 50%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 200% 100%;
+  background-position: 100%;
+  transition: background-position 275ms ease;
+  text-decoration: none; // text decorations are clipped in WebKit browsers
+  &:hover {
+    background-position: 0 100%;
+  }
 }
 
 
