--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -1,3 +1,53 @@
+/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ Snippets 2020 */
+/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ MAIN CODE */
+
+	flex {
+        display:         flex;
+        flex-direction:  column;
+        justify-content: center;
+        align-items:     center;
+        align-content:   center;
+	}
+
+
+/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ PROTO MARKUP */
+
+
+    /* block placeholder */
+
+    hr {
+        display:  block;
+        width:     100%;
+        min-height: 6em;
+        border:       0;
+        margin:  0 auto;
+    }
+    hr {
+        background-image: repeating-linear-gradient(
+            135deg,
+            var(--c1),
+            var(--c1) 0.75em,
+            var(--c2) 0.75em,
+            var(--c2) 1.50em);
+      --c1: hsla( 222 44% 44% / 0.125 );
+      --c2: hsla( 222 44% 44% / 0.0125 );
+    }
+    hr.h200 { height: 200vh }
+    hr.h110 { height: 110vh }
+    hr.h100 { height: 100vh }
+    hr.h90  { height:  90vh }
+    hr.h60  { height:  60vh }
+    hr.h50  { height:  50vh }
+    hr.h40  { height:  40vh }
+    hr.h25  { height:  25vh }
+
+    /*.*/
+
+
+/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ END 2020 */
+
+
+
 @charset "utf-8";
 @import url('part.css');
 
