--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -165,11 +165,44 @@ html {
     box-sizing: inherit;
 }
 
-html{
-  -moz-text-size-adjust: none;
-  -webkit-text-size-adjust: none;
+    html { -moz-text-size-adjust: none;
+        -webkit-text-size-adjust: none;
+                text-size-adjust: none; }
+
+/* RESET 2022 */
+/* https://kilianvalkhof.com/2022/css-html/your-css-reset-needs-text-size-adjust-probably/ */
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  box-sizing: border-box;
   text-size-adjust: none;
-  }
+  -webkit-text-size-adjust: none;
+  position: relative;
+  font-family: system-ui, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
+  min-height: 100%;
+}
+body {
+  position: relative;
+  height: 100%;
+  min-height: 100vh;
+  font-size: 100%;
+  line-height: 1.5;
+}
+
+input,
+textarea,
+button {
+  font-size: inherit;
+  font-family: inherit;
+}
 
 /* full-height 2019
    https://css-tricks.com/some-things-you-oughta-know-when-working-with-viewport-units/ */
