--- a/kid3-6game/app/garage48.css
+++ b/kid3-6game/app/garage48.css
@@ -3,7 +3,12 @@
         font-family: monospace;
         white-space: pre-wrap;
         padding:     0 1em 2em 1em;
-    }
+        }
+    [display-text] {
+        display:     block;
+        font-family: monospace;
+        white-space: pre-wrap;
+        }
     .box {
       --sx:           1rem;
         display:      grid;
@@ -134,4 +139,34 @@
       --link-color-text:  white;
     }
 
+/** ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~  Typography */
+
+
+:root {
+  --font-family--tufte-serif:
+        Vollkorn,
+        et-book,
+        Palatino,
+       "Palatino Linotype",
+       "Palatino LT STD",
+       "Book Antiqua",
+        Georgia,
+        serif,
+       "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-family--tufte-sans:
+       "Trebuchet MS",
+       "Gill Sans",
+       "Gill Sans MT",
+        sans-serif,
+       "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+body {
+    line-height: var(--line-height, 1.5);
+    font-family: var(--font-family, sans-serif);
+    font-weight: var(--font-weight, normal);
+}
+
+
 /** ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */
+
