--- a/kid3-6game/app/garage48.css
+++ b/kid3-6game/app/garage48.css
@@ -142,6 +142,19 @@
       --link-color-more:  hsl(359, 59%, 43%); /* NobleAction */
       --link-color-text:  white;
     }
+    .colors--swed-secondary {
+      --back-color:       hsl(212, 34%, 29%); /* NobleSea */
+      --back-color-more:  hsl(212, 42%, 22%);
+      --back-color-less:  hsl(212, 30%, 32%);
+
+      --text-color:       hsl(226, 27%, 90%); /* NobleWhite */
+      --text-color-more:  hsl(226, 32%, 75%); /* NobleDay */
+      --text-color-less:  hsl(226, 32%, 66%);
+
+      --link-color:       hsl(359, 54%, 53%); /* NobleAccent */
+      --link-color-more:  hsl(359, 59%, 43%); /* NobleAction */
+      --link-color-text:  white;
+    }
     .colors--ivory {
       --back-color:       hsl( 53, 66%, 80%); /* Ivory */
       --back-color-more:  hsl( 53, 70%, 70%);
@@ -206,6 +219,7 @@ a {
     background-color: var(--back-color-more);
 }
 
+a.button,
 .button {
     display: inline-block;
     border-radius: 0.25em;
@@ -216,6 +230,10 @@ a {
     background-color: var(--link-color);
 }
 
+a.button.green,
+.button.green {
+    background-color: hsl(179, 60%, 35%);
+}
 
 /** ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */
 
