--- a/kid3-6game/app/plate.css
+++ b/kid3-6game/app/plate.css
@@ -103,3 +103,35 @@
 .FeatureValue.FeatureValueC {
   --background-color: hsl(179, 60%, 35%);
 }
+
+.featureA { --feature-color: hsl(202, 36%, 60%); --feature-value: 75; }
+.featureB { --feature-color: hsl( 13, 61%, 54%); --feature-value: 60; }
+.featureC { --feature-color: hsl(179, 60%, 35%); --feature-value: 20; }
+.featureA { --feature-color2: hsla(202, 36%, 60%, 0.15); }
+.featureB { --feature-color2: hsla( 13, 61%, 54%, 0.15); }
+.featureC { --feature-color2: hsla(179, 60%, 35%, 0.15); }
+.f-bar {
+    height: 1rem;
+    margin: 0.25rem 0;
+    max-width: calc(100% - 8rem);
+    background-color: var(--feature-color2);
+    border-radius: 8px;
+    flex-grow:1;
+    position: relative;
+}
+.f-bar-current {
+    height: 100%;
+    width: calc( 1% * var(--value) );
+    border-radius: 6px;
+    background-color: var(--feature-color);
+}
+.f-bar-target {
+    position: absolute;
+    width: 3rem;
+    height: 3rem;
+    z-index: 1;
+    background-image: url(../art/plate-item.svg);
+    background-size: cover;
+    top: -1.5rem;
+    left: calc( 1% * var(--feature-value) - 1.5rem );
+}
