--- a/kid3-6game/app/plate.css
+++ b/kid3-6game/app/plate.css
@@ -135,3 +135,10 @@
     top: -1.5rem;
     left: calc( 1% * var(--feature-value) - 1.5rem );
 }
+
+.feedback-messages h2 {
+    color: var(--link-color);
+}
+.feedback-messages .hide {
+    display: none;
+}
