--- a/Snippets2023/CSS.css
+++ b/Snippets2023/CSS.css
@@ -15,6 +15,14 @@
     place-items: center;
 }
 
+[display-source] {
+    display:     block;
+    padding:     0 1em 2em;
+    font-family: monospace;
+    white-space: pre-wrap;
+}
+
+
 
 /* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ Layout */
 
