--- a/Snippets2023/CSS.css
+++ b/Snippets2023/CSS.css
@@ -1,4 +1,3 @@
-/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */
 /* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ Common combos */
 
 
@@ -22,7 +21,29 @@
     white-space: pre-wrap;
 }
 
+/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */
 
+    .mockbox {
+        background-image: repeating-linear-gradient(
+            135deg,
+            var(--c1),
+            var(--c1) 0.75rem,
+            var(--c2) 0.75rem,
+            var(--c2) 1.50rem);
+      --c1: hsla( 222 44% 44% / 0.124 );
+      --c2: hsla( 222 44% 44% / 0.0124 );
+
+        border:  0;
+        margin:  0;
+        width:   var(--width,100%);
+        height:  var(--height,auto);
+        display: grid;
+        place-items: center;
+
+        font-size: 1rem;
+        font-family: monospace;
+        color: var(--c1, currentColor);
+    }
 
 /* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ Layout */
 
