--- a/articles/PATAapsveikums2023/app/css.21xComponents.css
+++ b/articles/PATAapsveikums2023/app/css.21xComponents.css
@@ -1,4 +1,277 @@
-/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ custom components */
+/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ layoutScreenFixed */
 
+        .layoutScreenFixed {
+            position: fixed;
+            z-index: -1;
+            top:    0;
+            left:   0;
+            width:  100%;
+            height: 100vh;
+            overflow: hidden;
+            pointer-events: none;
+
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr;
+            place-items: center;
+
+            background-image: url(../art/chair-static2.jpg);
+            background-size: cover;
+            background-position: 50% 50%;
+        }
+        .layoutScreenFixed>* {
+            grid-area: 1/1 / 2/2;
+        }
+        .layoutScreenFixed>video {
+            min-width:  100%;
+            min-height: 100%;
+            height: 100%;
+        }
+        @media all and (min-aspect-ratio: 3840/2160) {
+            .layoutScreenFixed>video {
+                width:  100%;
+                height: auto;
+            }
+        }
+
+/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ layoutScreenContent */
+
+        .layoutScreenContent {
+            position: absolute;
+            z-index: 1;
+            top:    0;
+            left:   0;
+            width:  100%;
+            min-height: 100vh;
+
+            background: url(../art/open-background2.jpg);
+            background-color: hsl(60, 54%, 13%);
+            background-size: cover;
+            background-position: 50% 50%;
+            background-attachment: fixed;
+
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr;
+            place-items: center;
+        }
+        .layoutScreenContent>* {
+            grid-area: 1/1 / 2/2;
+        }
+
+        /*transition*/
+
+        .layoutScreenContent {
+            transition: opacity 1s ease-out;
+        }
+        .layoutScreenContent.isHidden {
+            opacity: 0;
+            pointer-events: none;
+            height: 100vh;
+            overflow: hidden;
+        }
+        .layoutScreenContent.isVisible {
+            opacity: 1;
+        }
+
+/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ layoutScreenTimer */
+
+        .layoutScreenTimer {
+            position: fixed;
+            z-index: 1;
+            top:    0;
+            left:   0;
+            width:  100%;
+            height: 100vh;
+
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr;
+            place-items: center;
+
+            background-color: transparent;
+        }
+        .layoutScreenTimer>* {
+            grid-area: 1/1 / 2/2;
+        }
+
+        .componentTimer {
+            width: max-content;
+            height: max-content;
+            min-height: 10rem;
+            min-width: 20rem;
+
+                       color: hsla(0, 0%,  10%, 1.0);
+            background-color: hsla(0, 0%, 100%, 0.5);
+            border-radius: 1rem;
+            padding: 1rem 1.5rem;
+        }
+        .componentTimer h1 {
+            font-family: 'Source Sans 3', sans-serif;
+            font-weight: 700;
+            font-size:   2.5rem;
+            margin-bottom: 0.5rem;
+        }
+        .componentTimeline {
+            display:grid;
+            grid-gap: 0.25rem;
+            grid-template-columns:
+                1fr 1fr min-content 1fr 1fr min-content 1fr 1fr;
+        }
+
+        /*transition*/
+
+        .layoutScreenTimer {
+          --transition: transform 1s ease-out, opacity 1s ease-out;
+        }
+        .layoutScreenContent.isVisible {
+          --transition: opacity 200ms ease-out;
+        }
+        .layoutScreenTimer.isHidden {
+            transition: transform 1s ease-out, opacity 1s ease-out;
+            opacity: 0;
+            pointer-events: none;
+            transform: translateY(-50vh);
+        }
+
+/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ wrapContentTypography */
+
+        .wrapContentTypography {
+            color: hsla(0, 0%, 96%, 1);
+            font-family: 'Source Sans 3', sans-serif;
+            font-weight:  400;
+            font-size: 1.5rem;
+            line-height: 1.25;
+        }
+        .wrapContentTypography p {
+            max-width: 24em;
+        }
+        .wrapContentTypography h4 {
+            font-weight: 700;
+            font-size: 1.5rem;
+            line-height: 1.25;
+        }
+        .wrapContentTypography h2 {
+            font-size:  3.75rem;
+            font-weight: 700;
+        }
+
+        /*quotes*/
+
+        .wrapContentTypography h2:before {
+            content: '“';
+            position: absolute;
+            transform: translateX(-2.25rem);
+        }
+        .wrapContentTypography h2:after {
+            content: '”';
+            position: absolute;
+            transform: translateX(-0.20rem);
+        }
+
+/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ content components */
+
+        .wrapContentLayout {
+            width:   100%;
+            padding: 2rem 3rem;
+            max-width: 66rem;
+
+            display:  grid;
+            grid-gap: 2rem 3rem;
+            grid-template-columns: 480fr 375fr;
+            align-items: center;
+        }
+        .wrapMovie {
+            grid-column:  1/3;
+/*            aspect-ratio: 16/9;*/
+            background-color: hsl(60, 54%, 13%);
+        }
+        .wrapMovie video {
+            display: block;
+            width: 100%;
+            height: auto;
+        }
+        @media all and (max-width:600px) {
+            .wrapContentLayout {
+                grid-template-columns: 1fr;
+            }
+            .wrapMovie {
+                grid-column:  1/2;
+            }
+            #QuoteW1 {
+                grid-row: 1/2;
+            }
+        }
+
+        .qw {
+            display: none;
+            position: absolute;
+            transform: translateX(-2.25rem);
+        }
+        .qe {
+            display: none;
+            position: absolute;
+            transform: translateX(-0.20rem);
+        }
+
+        #QuoteW1, #QuoteW6 { position: relative; }
+
+/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ Timer components */
+
+        .boxDigit {
+            background-color: transparent;
+                       color: hsla(0, 0%, 100%, 1);
+
+            display: grid;
+            place-items: center;
+            font-family: 'Source Sans 3', sans-serif;
+            font-weight: 600;
+            font-size:  6rem;
+            line-height: 1.25;
+            text-shadow: 2px 2px hsla(0, 0%,  10%, 1.0), -2px -2px hsla(0, 0%,  10%, 1.0);
+            padding: 0 0.25rem;
+
+            position: relative;
+            z-index: 1;
+        }
+        .boxDigit::before,
+        .boxDigit::after {
+            content: '';
+            background-color: hsla(0, 0%,  12%, 0.95);
+                       color: hsla(0, 0%, 100%, 1);
+            display: block;
+            position: absolute;
+            z-index: -1;
+            left: 0;
+            right: 0;
+        }
+        .boxDigit::before {
+            top: 0;
+            bottom: calc(50% + 1px);
+            border-radius: 1rem 1rem 0 0;
+        }
+        .boxDigit::after {
+            top: calc(50% + 1px);
+            bottom: 0;
+            border-radius: 0 0 1rem 1rem;
+        }
+        .sperator {
+            display: grid;
+            place-items: center;
+            align-self: center;
+            font-family: 'Source Sans 3', sans-serif;
+            font-weight: 600;
+            font-size:  6rem;
+            line-height: 1.25;
+            padding: 0 0.25rem;
+        }
+        .boxDigitTitle {
+            display: grid;
+            place-items: center;
+            font-family: 'Source Sans 3', sans-serif;
+            font-weight:  600;
+            font-size: 1.5rem;
+            text-transform: uppercase;
+        }
 
 /* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ End */
